[gd_scene load_steps=3 format=2]

[ext_resource path="res://PlayerBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="PlayerBar" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -96.0
mouse_filter = 2
color = Color( 0.180392, 0.12549, 0.12549, 0.501961 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerHBox" type="HBoxContainer" parent="PlayerBar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerBox" parent="PlayerBar/PlayerHBox" instance=ExtResource( 1 )]
margin_left = 10.0
margin_right = 164.0

[node name="PlayerBox2" parent="PlayerBar/PlayerHBox" instance=ExtResource( 1 )]
margin_left = 168.0
margin_right = 322.0
number = 1

[node name="PlayerBox3" parent="PlayerBar/PlayerHBox" instance=ExtResource( 1 )]
margin_left = 326.0
margin_right = 480.0
number = 2

[node name="PlayerBox4" parent="PlayerBar/PlayerHBox" instance=ExtResource( 1 )]
margin_left = 484.0
margin_right = 638.0
number = 3

[node name="PlayerBox5" parent="PlayerBar/PlayerHBox" instance=ExtResource( 1 )]
margin_left = 642.0
margin_right = 796.0
number = 4

[node name="PlayerBox6" parent="PlayerBar/PlayerHBox" instance=ExtResource( 1 )]
margin_left = 800.0
margin_right = 954.0
number = 5

[node name="PlayerBox7" parent="PlayerBar/PlayerHBox" instance=ExtResource( 1 )]
margin_left = 958.0
margin_right = 1112.0
number = 6

[node name="PlayerBox8" parent="PlayerBar/PlayerHBox" instance=ExtResource( 1 )]
margin_left = 1116.0
margin_right = 1270.0
number = 7
